# dim

./: CMakeLists.txt  Makefile  README.md  build.lua  main.dim  master.py
include/dim/lexer/: lexer.hpp
include/dim/parser/: ast.hpp  parser.hpp
include/dim/utils/: utils.hpp
include/lexer/: lexer.hxx
include/parser/: ast.hxx  cast.hxx  parser.hxx
include/runner/interpreter/: interpreter.hxx  register.hxx  value.hxx
include/utils/: utils.hxx
src/: main.cpp  main.cxx
src/dim/lexer/: lexer.cpp
src/dim/parser/: ast.cpp  parser.cpp
src/dim/utils/: utils.cpp
src/lexer/: lexer.cxx
src/parser/: ast.cxx  cast.cxx  parser.cxx
src/runner/interpreter/: interpreter.cxx  register.cxx  value.cxx
src/utils/: utils.cxx
